BPER/DEVF/force-app/main/default/objects/CIB_Visibilita_Opportunita__c/CIB_Visibilita_Opportunita__c.object-meta.xml
<CustomObject>
    <label>CIB Visibilità Opportunità</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIB Visibilità Opportunità</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIB Visibilità Opportunità</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>