BPER/DEVF/force-app/main/default/objects/CIB_Visibilita_Opportunita__c/fields/Banker_1__c.field-meta.xml
<CustomField>
    <fullName>Banker_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Banker 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>