BPER/DEVF/force-app/main/default/objects/CIB_Visibilita_Opportunita__c/fields/Banker_2_Search__c.field-meta.xml
<CustomField>
    <fullName>Banker_2_Search__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banker 2</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.CRM_PermissionSet__c</field>
            <operation>equals</operation>
            <value>NEC_CRM.CIB.IBC.SB</value>
        </filterItems>
        <filterItems>
            <field>User.CRM_PermissionSet__c</field>
            <operation>equals</operation>
            <value>NEC_CRM.CIB.IBC.DESK</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CIB_Visibilit_Opportunit1</relationshipName>
    <type>Lookup</type>
</CustomField>