BPER/DEVF/force-app/main/default/objects/CIB_Visibilita_Opportunita__c/fields/Direzione_Territoriale__c.field-meta.xml
<CustomField>
    <fullName>Direzione_Territoriale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Direzione Territoriale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>