BPER/DEVF/force-app/main/default/objects/CIB_Visibilita_Opportunita__c/fields/Direzione_Territoriale_Search__c.field-meta.xml
<CustomField>
    <fullName>Direzione_Territoriale_Search__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direzione Territoriale</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeName__c</field>
            <operation>equals</operation>
            <value>Direzione Regionale</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CIB Visibilità Opportunità</relationshipLabel>
    <relationshipName>CIB_Visibilit_Opportunit</relationshipName>
    <type>Lookup</type>
</CustomField>