BPER/DEVF/force-app/main/default/objects/CIB_Visibilita_Opportunita__c/fields/Utente_RM__c.field-meta.xml
<CustomField>
    <fullName>Utente_RM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Utente RM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>