BPER/DEVF/force-app/main/default/objects/CIB_Visibilita_Opportunita__c/fields/Utente_Support_1_Search__c.field-meta.xml
<CustomField>
    <fullName>Utente_Support_1_Search__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utente Support 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.CRM_PermissionSet__c</field>
            <operation>equals</operation>
            <value>NEC_CRM.CIB.LC.SUP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CIB_Visibilit_Opportunit3</relationshipName>
    <type>Lookup</type>
</CustomField>