BPER/DEVF/force-app/main/default/objects/CIB_Visibilita_Opportunita__c/fields/Utente_Support_2__c.field-meta.xml
<CustomField>
    <fullName>Utente_Support_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Utente Support 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>