BPER/DEVF/force-app/main/default/objects/CIB_Visibilita_Opportunita__c/recordTypes/IBC.recordType-meta.xml
<RecordType>
    <fullName>IBC</fullName>
    <active>true</active>
    <label>IBC</label>
</RecordType>