BPER/DEVF/force-app/main/default/objects/CIB_Visibilita_Opportunita__c/recordTypes/RM.recordType-meta.xml
<RecordType>
    <fullName>RM</fullName>
    <active>true</active>
    <label>RM</label>
</RecordType>