BPER/DEVF/force-app/main/default/objects/CIB_Visibilita_Opportunita__c/listViews/IBC.listView-meta.xml
<ListView>
    <fullName>IBC</fullName>
    <columns>NAME</columns>
    <columns>Direzione_Territoriale_Search__c</columns>
    <columns>Banker_1_Search__c</columns>
    <columns>Banker_2_Search__c</columns>
    <columns>RecordTypeName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordTypeName__c</field>
        <operation>equals</operation>
        <value>IBC</value>
    </filters>
    <label>Mappatura DT - Banker IBC</label>
</ListView>