BPER/DEVF/force-app/main/default/objects/CIB_Visibilita_Opportunita__c/listViews/RM.listView-meta.xml
<ListView>
    <fullName>RM</fullName>
    <columns>NAME</columns>
    <columns>Utente_RM_Search__c</columns>
    <columns>Utente_Support_1_Search__c</columns>
    <columns>Utente_Support_2_Search__c</columns>
    <columns>RecordTypeName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordTypeName__c</field>
        <operation>equals</operation>
        <value>RM</value>
    </filters>
    <label>Mappatura RM - Support</label>
</ListView>